Fix spacing

--- a/common/common.scss
+++ b/common/common.scss
@@ -13,7 +13,7 @@ body {
 
 .topic-list-item {
   border-bottom: none;
-  border-spacing: 2rem;
+  border-spacing: 0.5rem;
   border-collapse: separate;
 }
 
